--- a/res/layout/learn_words_layout.xml
+++ b/res/layout/learn_words_layout.xml
@@ -1,55 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back"
     android:orientation="vertical" >
 
-    
-        <ViewSwitcher
-	        android:id="@+id/switcher_word"
+	
+	    <TextView
+	        android:id="@+id/word"
+	        android:text="aaaaaa"
+			android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:layout_alignParentTop="true"
+        	android:layout_centerHorizontal="true"
+	        android:textSize="30sp" />
+	    
+        <EditText
+            android:id="@+id/hidden_edit_word"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+        	android:layout_alignParentTop="true"
+	    	android:layout_centerHorizontal="true"
+	    	android:textSize="30sp"
+	   		android:visibility="gone" />
+
+		
+	    <TextView
+	        android:id="@+id/wordTrad"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_alignParentTop="true"
-	        android:layout_centerHorizontal="true" >
-	
-		    <TextView
-		        android:id="@+id/word"
-		        android:text="aaaaaa"
-				android:layout_width="wrap_content"
-	        	android:layout_height="wrap_content"
-		        android:clickable="true"
-		        android:textSize="30sp" />
-		    
-	        <EditText
-	            android:id="@+id/hidden_edit_word"
-	            android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"
-	            android:hint="test" />
-	        
-	    </ViewSwitcher>
+        	android:layout_alignParentBottom="true"
+	    	android:layout_centerHorizontal="true"
+	        android:text="bbbbbb"
+	        android:textSize="30sp" />
 	    
-        <ViewSwitcher
-	        android:id="@+id/switcher_word_trad"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_alignParentBottom="true"
-		    android:layout_centerHorizontal="true" >
-			
-		    <TextView
-		        android:id="@+id/wordTrad"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:clickable="true"
-		        android:text="bbbbbb"
-		        android:textSize="30sp" />
-		    
-	        <EditText
-	            android:id="@+id/hidden_edit_word_trad"
-	            android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"
-	            android:hint="test" />
-       
-	    </ViewSwitcher>
-
+        <EditText
+            android:id="@+id/hidden_edit_word_trad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+        	android:layout_alignParentBottom="true"
+	    	android:layout_centerHorizontal="true"
+	   		android:textSize="30sp"
+	   		android:visibility="gone"/>
+      
 </RelativeLayout>
