--- a/res/layout/learn_words_layout.xml
+++ b/res/layout/learn_words_layout.xml
@@ -1,9 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:orientation="vertical" >
-
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+    	android:layout_height="match_parent"
+    	android:background="@drawable/back">
 	
 	    <TextView
 	        android:id="@+id/word"
@@ -41,5 +47,6 @@
 	    	android:layout_centerHorizontal="true"
 	   		android:textSize="30sp"
 	   		android:visibility="gone"/>
+	</RelativeLayout>
       
 </RelativeLayout>
