--- a/res/layout/learn_layout.xml
+++ b/res/layout/learn_layout.xml
@@ -7,7 +7,6 @@
         	android:id="@+id/viewpager"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
-		    android:orientation="vertical"
 		    android:layout_marginTop="180dp"
 		    android:layout_marginBottom="160dp" />
 
@@ -22,33 +21,42 @@
         android:textSize="75sp"
         android:layout_marginTop="5dp" />
     
-    <RelativeLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp" >
+   		<LinearLayout
+	        android:id="@+id/buttonsLearn"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="horizontal"
+	        android:gravity="center"
+	        android:layout_alignParentBottom="true"
+	        android:layout_marginBottom="50dp" >
 
-        <Button
-            android:id="@+id/buttonDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginStart="10dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:text="@string/string_delete" />
-
-        <Button
-            android:id="@+id/buttonModify"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="30dp"
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:text="@string/string_modify" />
-
-    </RelativeLayout>
+	        <Button
+	            android:id="@+id/buttonDelete"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/string_delete" />
+	        
+	        <Button
+	            android:id="@+id/buttonCancel"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            style="?android:attr/buttonStyleSmall"
+	            android:visibility="invisible"
+	            android:text="X" />
+	       	<Button
+	            android:id="@+id/buttonSave"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            style="?android:attr/buttonStyleSmall"
+	            android:visibility="invisible"
+	            android:text="V" />
+	
+	        <Button
+	            android:id="@+id/buttonModify"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/string_modify" />
+	        
+    	</LinearLayout>
 
 </RelativeLayout>
