--- a/res/layout/learn_words_layout.xml
+++ b/res/layout/learn_words_layout.xml
@@ -13,21 +13,23 @@
 	
 	    <TextView
 	        android:id="@+id/word"
-	        android:text="aaaaaa"
 			android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:layout_alignParentTop="true"
         	android:layout_centerHorizontal="true"
-	        android:textSize="30sp" />
+        	android:gravity="center"
+	        android:textSize="30sp"
+	   		android:visibility="visible" />
 	    
         <EditText
             android:id="@+id/hidden_edit_word"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
         	android:layout_alignParentTop="true"
-	    	android:layout_centerHorizontal="true"
+        	android:layout_centerHorizontal="true"
+        	android:gravity="center"
 	    	android:textSize="30sp"
-	   		android:visibility="gone" />
+	   		android:visibility="invisible" />
 
 		
 	    <TextView
@@ -36,17 +38,19 @@
 	        android:layout_height="wrap_content"
         	android:layout_alignParentBottom="true"
 	    	android:layout_centerHorizontal="true"
-	        android:text="bbbbbb"
-	        android:textSize="30sp" />
+        	android:gravity="center"
+	        android:textSize="30sp"
+	   		android:visibility="visible" />
 	    
         <EditText
             android:id="@+id/hidden_edit_word_trad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
         	android:layout_alignParentBottom="true"
-	    	android:layout_centerHorizontal="true"
+        	android:layout_centerHorizontal="true"
+        	android:gravity="center"
 	   		android:textSize="30sp"
-	   		android:visibility="gone"/>
+	   		android:visibility="invisible"/>
 	</RelativeLayout>
       
 </RelativeLayout>
