modifies the colors

--- a/res/layout/add_layout.xml
+++ b/res/layout/add_layout.xml
@@ -37,7 +37,7 @@
             android:textSize="30sp" />
 
         <EditText
-            android:id="@+id/editWordTrad"
+            android:id="@+id/editWordTrans"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
