--- a/res/drawable/back.xml
+++ b/res/drawable/back.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-   <solid android:color="#ffffff" />
-   <stroke android:width="1dip" android:color="#4fa5d5"/>
-   <corners android:radius="10dp" />
+   <solid android:color="@color/myLearnColor" />
+   <stroke android:width="2dip" android:color="@color/myGoldColor"/>
+   <corners android:radius="6dp" />
 </shape>
