--- a/res/layout/add_layout.xml
+++ b/res/layout/add_layout.xml
@@ -83,7 +83,8 @@
             android:id="@+id/add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/string_add" />
+            android:text="@string/string_add"
+    		android:background="@drawable/back" />
     </LinearLayout>
 
 </RelativeLayout>
