--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="red">#ffff0000</color>
+    <color name="yellow">#FFF176</color>
     <color name="my_yellow">#7FFFFF</color>
     <color name="myLearnColor">#FFFF7F</color>
-    <color name="myGoldColor">#FFD700</color>
+	<color name="myGoldColor">#FFD700</color>
 </resources>
