Add ActionBar in Learn Activity

--- a/res/layout/learn_layout.xml
+++ b/res/layout/learn_layout.xml
@@ -1,66 +1,68 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
-    <android.support.v4.view.ViewPager
-        	android:id="@+id/viewpager"
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:layout_marginTop="180dp"
-		    android:layout_marginBottom="160dp" />
 
-    <TextView
-        android:id="@+id/textViewLearn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/string_learn"
-        android:background="@drawable/back"
-        android:textSize="75sp"
-        android:layout_marginTop="5dp" />
-    
-   		<LinearLayout
-	        android:id="@+id/buttonsLearn"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:orientation="horizontal"
-	        android:gravity="center"
-	        android:layout_alignParentBottom="true"
-	        android:layout_marginBottom="50dp" >
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-	        <Button
-	            android:id="@+id/buttonDelete"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="@string/string_delete"
-    			android:background="@drawable/back" />
-	        
-	        <Button
-	            android:id="@+id/buttonCancel"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            style="?android:attr/buttonStyleSmall"
-	            android:visibility="invisible"
-	            android:text="X"
-    			android:background="@drawable/back" />
-	       	<Button
-	            android:id="@+id/buttonSave"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            style="?android:attr/buttonStyleSmall"
-	            android:visibility="invisible"
-	            android:text="V"
-    			android:background="@drawable/back" />
-	
-	        <Button
-	            android:id="@+id/buttonModify"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="@string/string_modify"
-    			android:background="@drawable/back" />
-	        
-    	</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="240dp"
+            android:layout_marginTop="100dp" />
+
+        <LinearLayout
+            android:id="@+id/buttonsLearn"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="50dp"
+            android:gravity="center"
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/buttonDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back"
+                android:text="@string/string_delete" />
+
+            <Button
+                android:id="@+id/buttonCancel"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back"
+                android:text="X"
+                android:visibility="invisible" />
+
+            <Button
+                android:id="@+id/buttonSave"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back"
+                android:text="V"
+                android:visibility="invisible" />
+
+            <Button
+                android:id="@+id/buttonModify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back"
+                android:text="@string/string_modify" />
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
