--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,5 +17,9 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <item name="android:windowBackground">@color/my_yellow</item>
     </style>
+    
+    <style name="toolbar_theme" parent="@style/ThemeOverlay.AppCompat.Light">
+    	<item name="colorControlNormal">@color/mybrightgrey</item>
+	</style>
 
 </resources>
