--- a/res/layout/learn_layout.xml
+++ b/res/layout/learn_layout.xml
@@ -11,7 +11,12 @@
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
+    
+<ScrollView 
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:isScrollContainer="false"
+    android:fillViewport="true">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -19,9 +24,8 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="240dp"
-            android:layout_marginTop="100dp" />
+            android:layout_height="150dp"
+            android:layout_marginTop="100dp"/>
 
         <LinearLayout
             android:id="@+id/buttonsLearn"
@@ -29,15 +33,18 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="50dp"
+            android:layout_marginTop="50dp"
             android:gravity="center"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:layout_below="@+id/viewpager" >
 
             <Button
                 android:id="@+id/buttonDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/back"
-                android:text="@string/string_delete" />
+                android:text="@string/string_delete"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/buttonCancel"
@@ -46,7 +53,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/back"
                 android:text="X"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/buttonSave"
@@ -55,14 +63,18 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/back"
                 android:text="V"
-                android:visibility="invisible" />
+                android:visibility="invisible" 
+                android:layout_margin="5dp"/>
 
             <Button
                 android:id="@+id/buttonModify"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/back"
-                android:text="@string/string_modify" />
+                android:text="@string/string_modify" 
+                android:layout_margin="5dp"/>
         </LinearLayout>
+       
     </RelativeLayout>
+     </ScrollView>
 </RelativeLayout>
