--- a/res/layout/test_words_layout.xml
+++ b/res/layout/test_words_layout.xml
@@ -2,34 +2,36 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:orientation="vertical" >
-    
-    <RelativeLayout
-        android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:background="@color/yellow"	>
-	    <TextView
-	        android:id="@+id/word"
-			android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:layout_alignParentTop="true"
-        	android:layout_centerHorizontal="true"
-        	android:gravity="center"
-	        android:textSize="30sp"
-    		android:background="@color/yellow"
-			android:text = "mot!" />
+    android:paddingRight="10dp" >
 
-        <EditText
-            android:id="@+id/test_word"
-            android:layout_width="wrap_content"
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-        	android:layout_alignParentBottom="true"
-        	android:layout_centerHorizontal="true"
-        	android:gravity="center"
-	   		android:textSize="30sp"
-	   		android:hint="trad!"/>
-	</RelativeLayout>
-      
+            android:background="@color/yellow" >
+
+            <TextView
+                android:id="@+id/word"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:background="@color/yellow"
+                android:gravity="center"
+                android:text="mot!"
+                android:textSize="30sp" />
+
+            <EditText
+                android:id="@+id/test_word"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:hint="trad!"
+                android:textSize="30sp" />
+        </RelativeLayout>
+
 </RelativeLayout>
