--- a/res/layout/main_layout.xml
+++ b/res/layout/main_layout.xml
@@ -9,14 +9,25 @@
     tools:context="com.example.furry_octo_waddle.activities.MainActivity"
     android:gravity="center" >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
-        android:orientation="vertical"
-        android:gravity="center"  >
+        android:layout_centerVertical="true"
+        android:fillViewport="true"
+        android:isScrollContainer="false"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:scrollbarStyle="outsideOverlay" >
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:orientation="vertical" >
         <Button
             android:id="@+id/buttonLearn"
             android:layout_width="wrap_content"
@@ -57,5 +68,5 @@
             android:width="200dp"
     		android:background="@drawable/back" />
     </LinearLayout>
-
+</ScrollView>
 </RelativeLayout>
