--- a/res/layout/translate_layout.xml
+++ b/res/layout/translate_layout.xml
@@ -43,39 +43,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-            <RelativeLayout
-                android:id="@+id/viewpager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="160dp"
-                android:layout_marginTop="180dp"
-                android:background="@drawable/back"
-                android:orientation="vertical" >
-
-                <EditText
-                    android:id="@+id/editWord"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center"
-                    android:hint="New Word !"
-                    android:inputType="text"
-                    android:textSize="30sp" />
-
-                <EditText
-                    android:id="@+id/editWordTrans"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_below="@id/editWord"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center"
-                    android:hint="Translation"
-                    android:inputType="text"
-                    android:textSize="30sp" >
-                </EditText>
-            </RelativeLayout>
+           <include
+               android:id="@+id/viewpager" 
+               layout="@layout/word_layout"
+               android:layout_height="wrap_content"
+               android:layout_width="match_parent"
+               android:layout_marginTop="50dp"
+               android:layout_marginBottom="35dp"/>
 
             <LinearLayout
                 android:id="@+id/buttonsLearn"
