--- a/res/layout/learn_layout.xml
+++ b/res/layout/learn_layout.xml
@@ -14,12 +14,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-            <android.support.v4.view.ViewPager
+            <com.example.furry_octo_waddle.activities.WrapContentViewPager
                 android:id="@+id/viewpager"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginBottom="50dp"
-                android:layout_marginTop="60dp" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="35dp"
+                />
 
             <LinearLayout
                 android:id="@+id/buttonsLearn"
@@ -27,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
 				android:layout_below="@+id/viewpager"                
-				android:layout_marginBottom="50dp"
+				android:layout_marginBottom="5dp"
                 android:gravity="center"
                 android:orientation="horizontal" >
 
