--- a/res/layout/row_layout.xml
+++ b/res/layout/row_layout.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:baselineAligned="false"
     android:layout_height="wrap_content" >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <LinearLayout
         android:layout_height="wrap_content"
-        android:background="@drawable/back" >
+        android:layout_width="0dp"
+        android:orientation="horizontal"
+        android:background="@drawable/back"
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/label"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@+id/label"
-            android:textSize="25sp" >
+            android:padding="2dp"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:layout_weight="1" >
         </TextView>
 
         <TextView
             android:id="@+id/label_t"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:text="@+id/label_t"
-            android:textSize="20sp" >
+            android:textSize="20sp"
+            android:gravity="center"
+            android:padding="2dp"
+            android:layout_weight="1" >
         </TextView>
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
