--- a/res/layout/test_layout.xml
+++ b/res/layout/test_layout.xml
@@ -12,12 +12,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
-    <android.support.v4.view.ViewPager
+     
+     <com.example.furry_octo_waddle.activities.WrapContentViewPager
         	android:id="@+id/viewpager"
 		    android:layout_width="match_parent"
-		    android:layout_height="150dp"
-		    android:layout_marginTop="60dp"
-		    android:layout_marginBottom="300dp"/>
+		    android:layout_height="wrap_content"
+		    android:layout_marginTop="50dp"
+		    android:layout_marginBottom="60dp"/>
 
     <Button
         android:id="@+id/answer_button"
