--- a/res/layout/test_layout.xml
+++ b/res/layout/test_layout.xml
@@ -10,7 +10,7 @@
 		<RelativeLayout android:layout_width="match_parent"
 			android:layout_height="wrap_content">
 
-			<com.example.furry_octo_waddle.activities.WrapContentViewPager
+			<com.example.furry_octo_waddle.activities.TestWrapContentViewPager
 				android:id="@+id/viewpager" android:layout_width="match_parent"
 				android:layout_height="wrap_content" android:layout_marginTop="50dp"
 				android:layout_marginBottom="60dp" />
