--- a/res/layout/word_layout.xml
+++ b/res/layout/word_layout.xml
@@ -28,7 +28,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:hint="New Word !"
+            android:hint="New word !"
             
             android:nextFocusDown="@+id/edittWordTrans"
             android:singleLine="true"
