--- a/res/layout/word_layout.xml
+++ b/res/layout/word_layout.xml
@@ -7,56 +7,74 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/back" >
 
-        <TextView
-            android:id="@+id/tvWord"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            
-            android:textSize="30sp"
-            android:visibility="visible" />
+        <RelativeLayout
+            android:id="@+id/word"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <EditText
-            android:id="@+id/editWord"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:hint="New word !"
-            
-            android:nextFocusDown="@+id/edittWordTrans"
-            android:singleLine="true"
-            android:textSize="30sp"
-            android:visibility="invisible" />
+            <TextView
+                android:id="@+id/tvWord"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:textSize="30sp"
+                android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/tvWordTrans"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:textSize="30sp"
-            android:visibility="visible" />
+            <EditText
+                android:id="@+id/editWord"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:hint="New word !"
+                android:nextFocusDown="@+id/edittWordTrans"
+                android:singleLine="true"
+                android:textSize="30sp"
+                android:visibility="invisible" />
+        </RelativeLayout>
 
-        <EditText
-            android:id="@+id/editWordTrans"
+        <include
+            android:id="@+id/more_features"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:hint="Translation"
-            android:gravity="center"
-            android:singleLine="true"
-            android:selectAllOnFocus="true"
-            android:textSize="30sp"
-            android:visibility="invisible" />
+            android:layout_below="@+id/word"
+            layout="@layout/extra_word_layout" />
+
+        <RelativeLayout
+            android:id="@+id/trans"
+            android:layout_below="@+id/more_features"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/tvWordTrans"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:textSize="30sp"
+                android:visibility="visible" />
+
+            <EditText
+                android:id="@+id/editWordTrans"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:hint="Translation"
+                android:selectAllOnFocus="true"
+                android:singleLine="true"
+                android:textSize="30sp"
+                android:visibility="invisible" />
+        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
