--- a/res/layout/modify_layout.xml
+++ b/res/layout/modify_layout.xml
@@ -1,29 +1,48 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fillViewport="true"
-        android:isScrollContainer="false" >
+    <!-- The main content view -->
 
-        <RelativeLayout
-            android:id="@+id/modif_word"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-           <include
-               android:id="@+id/viewpager" 
-               layout="@layout/word_layout"
-               android:layout_height="wrap_content"
-               android:layout_width="match_parent"
-               android:layout_marginTop="50dp"
-               android:layout_marginBottom="35dp"/>
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fillViewport="true"
+            android:isScrollContainer="false" >
 
-        </RelativeLayout>
-    </ScrollView>
+            <RelativeLayout
+                android:id="@+id/modif_word"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
 
-</RelativeLayout>
+                <include
+                    android:id="@+id/viewpager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="35dp"
+                    android:layout_marginTop="50dp"
+                    layout="@layout/word_layout" />
+            </RelativeLayout>
+        </ScrollView>
+    </FrameLayout>
+    <!-- The navigation drawer -->
+
+    <ExpandableListView
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:background="#111"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp" />
+
+</android.support.v4.widget.DrawerLayout>
