--- a/res/layout/test_layout.xml
+++ b/res/layout/test_layout.xml
@@ -1,25 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-	android:layout_height="match_parent">
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-	<ScrollView android:layout_width="fill_parent"
-		android:layout_height="fill_parent" android:fillViewport="true"
-		android:isScrollContainer="false">
+    <!-- The main content view -->
 
-		<RelativeLayout android:layout_width="match_parent"
-			android:layout_height="wrap_content">
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-			<com.example.furry_octo_waddle.activities.TestWrapContentViewPager
-				android:id="@+id/viewpager" android:layout_width="match_parent"
-				android:layout_height="wrap_content" android:layout_marginTop="50dp"
-				android:layout_marginBottom="60dp" />
+        <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:fillViewport="true"
+            android:isScrollContainer="false" >
 
-			<TextView android:id="@+id/liveScore" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:layout_alignParentLeft="true"
-				android:layout_marginLeft="20dp" android:text="12/23"
-				android:textSize="30sp" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
 
-		</RelativeLayout>
-	</ScrollView>
-</RelativeLayout>
+                <com.example.furry_octo_waddle.activities.TestWrapContentViewPager
+                    android:id="@+id/viewpager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="60dp"
+                    android:layout_marginTop="50dp" />
+
+                <TextView
+                    android:id="@+id/liveScore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="20dp"
+                    android:text="12/23"
+                    android:textSize="30sp" />
+            </RelativeLayout>
+        </ScrollView>
+    </FrameLayout>
+    <!-- The navigation drawer -->
+
+    <ExpandableListView
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:background="#111"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp" />
+
+</android.support.v4.widget.DrawerLayout>
