--- a/res/layout/translate_layout.xml
+++ b/res/layout/translate_layout.xml
@@ -1,35 +1,55 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent" >
 
-    <RelativeLayout
-        android:id="@+id/listlay"
+    <!-- The main content view -->
+
+    <FrameLayout
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" >
 
-        <EditText
-            android:id="@+id/search"
+        <RelativeLayout
+            android:id="@+id/listlay"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:hint="Search"
-            android:inputType="text"
-            android:textSize="25sp" />
+            android:layout_height="wrap_content" >
 
-        <CheckBox
-            android:id="@+id/search_all"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-			android:layout_alignParentRight="true"
-            android:onClick="onCheckboxClicked" />
+            <EditText
+                android:id="@+id/search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="Search"
+                android:inputType="text"
+                android:textSize="25sp" />
 
-        <ListView
-            android:id="@android:id/list"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_below="@+id/search" />
-    </RelativeLayout>
+            <CheckBox
+                android:id="@+id/search_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:onClick="onCheckboxClicked" />
 
-</RelativeLayout>
+            <ListView
+                android:id="@android:id/list"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_below="@+id/search" />
+        </RelativeLayout>
+    </FrameLayout>
+    <!-- The navigation drawer -->
+
+    <ExpandableListView
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:background="#111"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp" />
+
+</android.support.v4.widget.DrawerLayout>
